fixing jump link and string

--- a/pegasus/sites.v3/code.org/public/css/page/young-women-in-cs-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/page/young-women-in-cs-styles.scss
@@ -127,7 +127,7 @@ ol.steps-list {
   }
 }
 
-section.partner-program {
+section#partner-program {
 
   figure.img-wrapper {
     background: url("/images/yw-page-intro.png") center no-repeat;
